Make moz-icon: work on Windows drives b=236227 r=mscott sr=tor